# nyx-lang

./: Cargo.toml  fibo.nyx  hello_world.nyx  loop.nyx  nyx-lang  print.nyx  type_err.nyx
nyxc_ast/: Cargo.toml
nyxc_ast/src/: ast.rs  diagnostics.rs  keywords.rs  lib.rs
nyxc_evaluator/: Cargo.toml
nyxc_evaluator/src/: environment.rs  lib.rs  main.rs  object.rs
nyxc_lexer/: Cargo.toml  README.md  main.nyx
nyxc_lexer/src/: cursor.rs  lib.rs  main.rs  tokens.rs
nyxc_parser/: Cargo.toml
nyxc_parser/src/: lib.rs  main.rs
nyxc_parser/src/lexer/: mod.rs
nyxc_typechecker/: Cargo.toml
nyxc_typechecker/src/: lib.rs  main.rs
src/: main.rs
